--- a/generation/src/main/resources/templates/invoice.html
+++ b/generation/src/main/resources/templates/invoice.html
@@ -102,7 +102,7 @@
 
   <body>
     <div class="header">
-      <img src="static/tinkori.png" class="logo" />
+      <!-- <img src="static/tinkori.png" class="logo" /> -->
       <div class="brand-name">THE TINKORI TALES</div>
       <div class="tagline">
         Three Threads, One Story – shared from our world to yours
@@ -190,7 +190,7 @@
 
     <div style="margin-top: 40px; text-align: right; font-size: 12px">
       <div>Authorized Signature</div>
-      <img src="static/signature.png" style="width: 120px; margin-top: 5px" />
+      <!-- <img src="static/signature.png" style="width: 120px; margin-top: 5px" /> -->
       <div style="margin-top: 5px">
         Signed on: <span th:text="${date}"></span>
       </div>
